--- a/demo.html
+++ b/demo.html
@@ -17,12 +17,6 @@
 	Click a circle and wait for your point.
 </div>
 
-<div class="scoreHolder">
-<span class="what">Your score: </span><span id="yourScore" class="what">0</span><br />
-<span class="what">Over: </span><span id="total" class="what">0</span><br />
-<span class="what">Percentage: </span><span id="percent" class="what">0</span>
-</div>
-
 <div class="triHolder">
 <div id="yourPoint"></div>
 <div class="circleTriHold">
@@ -149,6 +143,11 @@
 			</div></div>
 	</div>
 	
+</div>
+<div class="scoreHolder" style="text-align:center;float:right;margin-top:-94px;">
+<span class="what">Your score: </span><span id="yourScore" class="what">16</span><br>
+<span class="what">Over: </span><span id="total" class="what">30</span><br>
+<span class="what">Percentage: </span><span id="percent" class="what">53.33%</span>
 </div>
 <div style="text-align:center;margin-top:15px;height:50px;">
 	<button onclick="resetTriangle()" class="resetButton" style="display:none;">Replay</button>
